--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=7.0.0",
+        "bybzmt/router":"^1.0",
+        "bybzmt/tcplock": "^1.0",
+        "flexihash/flexihash": "^2.0",
+        "bybzmt/logger": "^0.0.2",
+        "bybzmt/phpdb": "^1.0"
     },
     "autoload": {
         "psr-4": {
